# bogo-gpu

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: config.rs  gpu.rs  gui.rs  history.rs  main.rs  messages.rs  rng.rs  worker.rs
src/compute/: mod.rs
src/compute/amd/: kernel.hip  mod.rs
src/compute/gpu/: kernel.cu  mod.rs
