[package]
name = "bogo-gpu"
version = "0.2.0"
edition = "2021"

[features]
default = ["cuda"]
cuda = ["dep:cust"]
hip  = []

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
tokio             = { version = "1",    features = ["full"] }
tokio-tungstenite = { version = "0.23", features = ["rustls-tls-native-roots", "__rustls-tls"] }
rustls            = { version = "0.23", features = ["ring"], default-features = false }
futures-util      = "0.3"
serde             = { version = "1",    features = ["derive"] }
serde_json        = "1"
toml              = "0.8"
thiserror         = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs              = "5"
anyhow            = "1"
rayon             = "1"
http              = "1"
tokio-util        = "0.7"
cust = { version = "0.3", optional = true }

# GUI
eframe            = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui              = "0.29"

[build-dependencies]

[[bin]]
name = "bogo-gpu"
path = "src/main.rs"
